# QSP-Bt

./: ex3.ipynb  ex3_rs.ipynb
data/old/: c_6z.txt  c_6z_o.csv  gp_10,0,400_1600.txt  l400_d1600.txt
ex3-rs/: .gitignore  Cargo.toml  README.md  build.rs  plot_x.gp
ex3-rs/benches/: qsp_bench.rs
ex3-rs/crates/cli/: Cargo.toml  README.md
ex3-rs/crates/cli/src/: cli.rs  main.rs  observe.rs
ex3-rs/crates/cli/src/data/: datafile.rs
ex3-rs/crates/cli/src/tasks/: get_least_pulses.rs  mod.rs  plot_runtimes.rs  scaling_behavior.rs  solve_poly.rs
ex3-rs/crates/core/: Cargo.toml  README.md
ex3-rs/crates/core/src/: lib.rs  target.rs  utils.rs
ex3-rs/crates/core/src/compute/: c2x2.rs  mod.rs  regularized.rs
ex3-rs/crates/core/src/compute/cpu/: mod.rs  qsp.rs
ex3-rs/crates/core/src/compute/wx/: mod.rs  qsp_wx.rs
ex3-rs/crates/core/src/compute/wz/: mod.rs  qsp_wz.rs
ex3-rs/crates/core/src/solvers/: bfgs.rs  configuration.rs  lm.rs  mod.rs  observe.rs  strategies.rs
ex3-rs/crates/python/: Cargo.toml  README.md  pyproject.toml
ex3-rs/crates/python/src/: helpers.rs  lib.rs  progress.rs  types.rs
ex3-rs/plotting/: plot_x.gp
ex3-rs/src/: cli.rs  lib.rs  main.rs  qsp.rs  solver.rs  target.rs  utils.rs
ex3-rs/src/compute/: mod.rs
ex3-rs/src/compute/cpu/: c2x2.rs  mod.rs  qsp.rs
ex3-rs/src/data/: datafile.rs  mod.rs
ex3-rs/src/solvers/: bfgs.rs  lm.rs  mod.rs  strategies.rs
ex3-rs/src/tasks/: get_least_pulses.rs  plot_runtimes.rs  solve_poly.rs
notebooks/: compare_with_paper.ipynb  ex3_rs.ipynb  ex4.ipynb  micromaser_polys.ipynb  mm_data.json
