[package]
name = "ex3-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
num-complex = {version="0.4", features=["serde"] }
ndarray = { version="0.16",  features = ["serde"] }
nalgebra="0.34"
argmin = "0.11"
argmin-math = { version = "0.5", features = ["ndarray_v0_16-nolinalg"] }
rand="0.10"
clap = { version = "4", features = ["derive"] }
rayon = "1"
levenberg-marquardt = "0.15"
anyhow = "1.0"
serde = { version="1.0" , features = ["derive"] }
toml = "1.1"
chrono = "0.4.44"
shlex = "1.3.0"
hostname = "0.4.2"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "qsp_bench"
harness = false


[build-dependencies]
vergen = { version = "8", features = ["build", "cargo", "git", "gitcl", "rustc"] }
