[package]
name="qsp-rs-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name="qsp-rs"
path="src/main.rs"

[dependencies]
qsp-rs-core.workspace = true
shlex = "1.3.0"
hostname = "0.4.2"
clap = { version = "4", features = ["derive"] }
num-complex = {version="0.4", features=["serde"] }
ndarray = { version="0.16",  features = ["serde"] }
serde = { version="1.0" , features = ["derive"] }
anyhow = "1.0"
toml = "1.1"
chrono = "0.4.44"

[build-dependencies]
vergen = { version = "8", features = ["build", "cargo", "git", "gitcl", "rustc"] }
